test/Fail/Copatterns.err
test/Fail/Copatterns.agda:15.1-5: error: [CustomBackendError]
agda2hs: not supported in Haskell: copatterns
